// <auto-generated />
using System;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using VirtualMachineLifecycle;

#nullable disable

namespace VirtualMachineLifecycle.Migrations
{
    [DbContext(typeof(DataContext))]
    partial class DataContextModelSnapshot : ModelSnapshot
    {
        protected override void BuildModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder.HasAnnotation("ProductVersion", "10.0.1");

            modelBuilder.Entity("VirtualMachineLifecycle.AuditAction", b =>
                {
                    b.Property<int>("Id")
                        .HasColumnType("INTEGER");

                    b.Property<string>("DescriptionText")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("TEXT");

                    b.HasKey("Id");

                    b.ToTable("audit_actions", (string)null);

                    b.HasData(
                        new
                        {
                            Id = 1,
                            DescriptionText = "Login"
                        },
                        new
                        {
                            Id = 2,
                            DescriptionText = "Logout"
                        },
                        new
                        {
                            Id = 3,
                            DescriptionText = "Snapshot Created"
                        },
                        new
                        {
                            Id = 4,
                            DescriptionText = "Snapshot Deleted"
                        },
                        new
                        {
                            Id = 5,
                            DescriptionText = "Snapshot Restored"
                        },
                        new
                        {
                            Id = 6,
                            DescriptionText = "VM Start"
                        },
                        new
                        {
                            Id = 7,
                            DescriptionText = "VM Stop"
                        },
                        new
                        {
                            Id = 8,
                            DescriptionText = "Reboot"
                        },
                        new
                        {
                            Id = 9,
                            DescriptionText = "Delete"
                        },
                        new
                        {
                            Id = 10,
                            DescriptionText = "View"
                        });
                });

            modelBuilder.Entity("VirtualMachineLifecycle.AuditLog", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<int>("ActionId")
                        .HasColumnType("INTEGER");

                    b.Property<string>("Details")
                        .HasColumnType("TEXT");

                    b.Property<DateTime>("Timestamp")
                        .HasColumnType("TEXT");

                    b.Property<int>("UserId")
                        .HasColumnType("INTEGER");

                    b.Property<int?>("VmId")
                        .HasColumnType("INTEGER");

                    b.HasKey("Id");

                    b.HasIndex("ActionId");

                    b.HasIndex("UserId");

                    b.HasIndex("VmId");

                    b.ToTable("audit_logs", (string)null);
                });

            modelBuilder.Entity("VirtualMachineLifecycle.Provider", b =>
                {
                    b.Property<int>("Id")
                        .HasColumnType("INTEGER");

                    b.Property<string>("DescriptionText")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("TEXT");

                    b.HasKey("Id");

                    b.ToTable("providers", (string)null);

                    b.HasData(
                        new
                        {
                            Id = 1,
                            DescriptionText = "AWS"
                        },
                        new
                        {
                            Id = 2,
                            DescriptionText = "Azure"
                        });
                });

            modelBuilder.Entity("VirtualMachineLifecycle.Snapshot", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("TEXT");

                    b.Property<int>("CreatedBy")
                        .HasColumnType("INTEGER");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(255)
                        .HasColumnType("TEXT");

                    b.Property<DateTime>("UpdatedAt")
                        .HasColumnType("TEXT");

                    b.Property<int>("VmId")
                        .HasColumnType("INTEGER");

                    b.HasKey("Id");

                    b.HasIndex("CreatedBy");

                    b.HasIndex("VmId");

                    b.ToTable("snapshots", (string)null);
                });

            modelBuilder.Entity("VirtualMachineLifecycle.User", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("TEXT");

                    b.Property<DateTime>("UpdatedAt")
                        .HasColumnType("TEXT");

                    b.Property<int>("UserTypeId")
                        .HasColumnType("INTEGER");

                    b.Property<string>("Username")
                        .IsRequired()
                        .HasMaxLength(255)
                        .HasColumnType("TEXT");

                    b.HasKey("Id");

                    b.HasIndex("UserTypeId");

                    b.ToTable("users", (string)null);
                });

            modelBuilder.Entity("VirtualMachineLifecycle.UserType", b =>
                {
                    b.Property<int>("Id")
                        .HasColumnType("INTEGER");

                    b.Property<string>("DescriptionText")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("TEXT");

                    b.HasKey("Id");

                    b.ToTable("user_types", (string)null);

                    b.HasData(
                        new
                        {
                            Id = 1,
                            DescriptionText = "Viewer"
                        },
                        new
                        {
                            Id = 2,
                            DescriptionText = "Operator"
                        });
                });

            modelBuilder.Entity("VirtualMachineLifecycle.Vm", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("TEXT");

                    b.Property<DateTime?>("LastAction")
                        .HasColumnType("TEXT");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(255)
                        .HasColumnType("TEXT");

                    b.Property<int>("ProviderId")
                        .HasColumnType("INTEGER");

                    b.Property<string>("Tags")
                        .HasColumnType("TEXT");

                    b.Property<DateTime>("UpdatedAt")
                        .HasColumnType("TEXT");

                    b.Property<int>("VmStatusId")
                        .HasColumnType("INTEGER");

                    b.HasKey("Id");

                    b.HasIndex("ProviderId");

                    b.HasIndex("VmStatusId");

                    b.ToTable("vms", (string)null);
                });

            modelBuilder.Entity("VirtualMachineLifecycle.VmStatus", b =>
                {
                    b.Property<int>("Id")
                        .HasColumnType("INTEGER");

                    b.Property<string>("DescriptionText")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("TEXT");

                    b.HasKey("Id");

                    b.ToTable("vm_statuses", (string)null);

                    b.HasData(
                        new
                        {
                            Id = 1,
                            DescriptionText = "Running"
                        },
                        new
                        {
                            Id = 2,
                            DescriptionText = "Stopped"
                        });
                });

            modelBuilder.Entity("VirtualMachineLifecycle.AuditLog", b =>
                {
                    b.HasOne("VirtualMachineLifecycle.AuditAction", "AuditAction")
                        .WithMany()
                        .HasForeignKey("ActionId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.HasOne("VirtualMachineLifecycle.User", "User")
                        .WithMany("AuditLogs")
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.HasOne("VirtualMachineLifecycle.Vm", "Vm")
                        .WithMany("AuditLogs")
                        .HasForeignKey("VmId")
                        .OnDelete(DeleteBehavior.Restrict);

                    b.Navigation("AuditAction");

                    b.Navigation("User");

                    b.Navigation("Vm");
                });

            modelBuilder.Entity("VirtualMachineLifecycle.Snapshot", b =>
                {
                    b.HasOne("VirtualMachineLifecycle.User", "CreatedByUser")
                        .WithMany("Snapshots")
                        .HasForeignKey("CreatedBy")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.HasOne("VirtualMachineLifecycle.Vm", "Vm")
                        .WithMany("Snapshots")
                        .HasForeignKey("VmId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.Navigation("CreatedByUser");

                    b.Navigation("Vm");
                });

            modelBuilder.Entity("VirtualMachineLifecycle.User", b =>
                {
                    b.HasOne("VirtualMachineLifecycle.UserType", "UserType")
                        .WithMany()
                        .HasForeignKey("UserTypeId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.Navigation("UserType");
                });

            modelBuilder.Entity("VirtualMachineLifecycle.Vm", b =>
                {
                    b.HasOne("VirtualMachineLifecycle.Provider", "Provider")
                        .WithMany()
                        .HasForeignKey("ProviderId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.HasOne("VirtualMachineLifecycle.VmStatus", "VmStatus")
                        .WithMany()
                        .HasForeignKey("VmStatusId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.Navigation("Provider");

                    b.Navigation("VmStatus");
                });

            modelBuilder.Entity("VirtualMachineLifecycle.User", b =>
                {
                    b.Navigation("AuditLogs");

                    b.Navigation("Snapshots");
                });

            modelBuilder.Entity("VirtualMachineLifecycle.Vm", b =>
                {
                    b.Navigation("AuditLogs");

                    b.Navigation("Snapshots");
                });
#pragma warning restore 612, 618
        }
    }
}
